# cls-mcp-server

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-publish.yml  pypi-publish.yml
deploy/docker/: Dockerfile
deploy/helm/cls-mcp-server/: Chart.yaml  values.yaml
deploy/helm/cls-mcp-server/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml
deploy/kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
deploy/systemd/: cls-mcp-server.env  cls-mcp-server.service  install.sh  uninstall.sh
docs/: cls内部工具  deployment-guide.md
reference/: cls_extension_syntax.md
src/cls_mcp_server/: __init__.py  __main__.py  auth.py  config.py  middleware.py  server.py
src/cls_mcp_server/reference/: cls_extension_syntax.md
src/cls_mcp_server/tools/: __init__.py  _constants.py  _state.py  alarm.py  data_transform.py  metrics.py  registry.py  resource.py  scheduled_sql.py  search.py  time_utils.py
src/cls_mcp_server/tools/text_to_cql/: __init__.py  cql_generator.py  cql_validator.py  llm_client.py  mode_router.py  prompts.py  syntax_docs.py  tool_definition.py
src/cls_mcp_server/utils/: errors.py  formatter.py  stability.py  validators.py
tests/: conftest.py  test_search_tools_e2e.py  test_stability.py  test_text_to_cql.py  test_time_utils.py  test_validators.py  test_validators_v2.py
tests/integration/: conftest.py  test_text_to_cql_integration.py
tests/text_to_cql/: test_auto_fallback.py  test_cql_validator.py  test_prompts.py  test_section_filter.py  test_syntax_docs.py  test_tool_definition.py
